--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/2400.import-column-stats-mysql.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/2400.import-column-stats-mysql.md
@@ -11,7 +11,6 @@ DBMS_STATS.IMPORT_COLUMN_STATS (
   colname          VARCHAR2,
   partname         VARCHAR2 DEFAULT NULL,
   stattab          VARCHAR2, 
-  statid           VARCHAR2 DEFAULT NULL,
   statown          VARCHAR2 DEFAULT NULL,
   no_invalidate    BOOLEAN DEFAULT  FALSE,
   force            BOOLEAN DEFAULT FALSE);
@@ -26,9 +25,8 @@ DBMS_STATS.IMPORT_COLUMN_STATS (
 | colname       | 列名。                                                                        |
 | partname      | 表分区的名称。 如果表已分区且 `partname` 为 `NULL`，则导入全局和分区列统计信息。   |
 | stattab       | 指定导出的用户统计信息表的表名。                                                 |
-| statid        |  <br>**说明**  当前版本暂不支持此参数。</br>                        |
 | statown       | 指定导出的用户统计信息表的用户名。                                                |
-| no_invalidate |  <br>**说明**  当前版本暂不支持此参数。</br>                        |
+| no_invalidate |  收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。                        |
 | force         | 是否强制导入，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会导入统计信息。 |
 
 
