--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3600.set-index-stats-mysql.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3600.set-index-stats-mysql.md
@@ -10,6 +10,7 @@ DBMS_STATS.SET_INDEX_STATS (
   indname            VARCHAR2,
   partname           VARCHAR2  DEFAULT NULL,
   numrows            NUMBER    DEFAULT NULL,
+  no_invalidate      BOOLEAN   DEFAULT FALSE,
   force              BOOLEAN   DEFAULT FALSE,
   avgrlen            NUMBER    DEFAULT NULL,
   nummacroblks       NUMBER    DEFAULT NULL,
@@ -24,6 +25,7 @@ DBMS_STATS.SET_INDEX_STATS (
 | ownname      | 表所在的 Schema。                                                                     |
 | indname      | 索引名称。                                                                            |
 | partname     | 分区名称。                                                                            |
+| no_invalidate| 收集统计信息是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
 | numrows      | 索引中的行数（分区）。                                                                 |
 | force        | 是否强制设置索引统计信息，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会设置索引统计信息。 |
 | avgrlen      | 索引表的平均行长（以字节为单位）。                                                      |
@@ -50,12 +52,13 @@ DBMS_STATS.SET_INDEX_STATS (
 * 优化器通过缓存数据来估计索引或统计表访问的缓存块数。操作的总成本包括从磁盘读取未缓存块的 I/O 成本、从缓冲区中获取缓存块的 CPU 成本以及处理数据的 CPU 成本。
 
 
+
 ## 示例 
 
 设置用户 `testUser01` 的索引 `idx1` 的相关信息。
 
 ```sql
-obclient> CALL DBMS_STATS.SET_INDEX_STATS('testUser01', 'idx1', numrows=>10, avgrlen=>10， 
+obclient> CALL DBMS_STATS.SET_INDEX_STATS('testUser01', 'idx1', numrows=>10, avgrlen=>10, 
     tabname=>'tbl1');
 Query OK, 0 rows affected
 ```
