--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/700.delete-schema-stats-mysql.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/700.delete-schema-stats-mysql.md
@@ -7,9 +7,6 @@
 ```sql
 DBMS_STATS.DELETE_SCHEMA_STATS (
   ownname          VARCHAR2, 
-  stattab          VARCHAR2 DEFAULT NULL, 
-  statid           VARCHAR2 DEFAULT NULL,
-  statown          VARCHAR2 DEFAULT NULL,
   no_invalidate    BOOLEAN DEFAULT FALSE),
   force            BOOLEAN DEFAULT FALSE);
 ```
@@ -22,10 +19,7 @@ DBMS_STATS.DELETE_SCHEMA_STATS (
 |      参数       |                                      解释                                   |
 |---------------|------------------------------------------------------------------------------|
 | ownname       | Schema 的名称。                                                               |
-| stattab       | <br>**说明** 当前版本暂不支持此参数。</br>                                      |
-| statid        | <br>**说明** 当前版本暂不支持此参数。</br>                                      |
-| statown       | <br>**说明** 该参数暂未实现，不可用。</br>                                      |
-| no_invalidate | <br>**说明** 当前版本暂不支持此参数。</br>                                      |
+| no_invalidate | 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。                                     |
 | force         | 是否强制删除，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会删除统计信息。 |
 
 
