--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1200.export-index-stats-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1200.export-index-stats-oracle.md
@@ -11,13 +11,14 @@
 
 ```sql
 DBMS_STATS.EXPORT_INDEX_STATS (
-ownname  VARCHAR2,
-indname  VARCHAR2, 
-partname VARCHAR2 DEFAULT NULL,
-stattab  VARCHAR2, 
-statid   VARCHAR2 DEFAULT NULL,
-statown  VARCHAR2 DEFAULT NULL),
-tabname  VARCHAR2  DEFAULT NULL;
+  ownname  VARCHAR2,
+  indname  VARCHAR2, 
+  partname VARCHAR2 DEFAULT NULL,
+  stattab  VARCHAR2, 
+  statid   VARCHAR2 DEFAULT NULL,
+  statown  VARCHAR2 DEFAULT NULL,
+  tabname  VARCHAR2  DEFAULT NULL
+  );
 ```
 
 ## 参数说明 
