--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1700.gather-table-stats-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/1700.gather-table-stats-oracle.md
@@ -20,7 +20,7 @@ DBMS_STATS.GATHER_TABLE_STATS (
   degree              NUMBER   DEFAULT to_degree_type(get_param('DEGREE')),
   granularity         VARCHAR2 DEFAULT DEFAULT_GRANULARITY, 
   cascade             BOOLEAN DEFAULT NULL,
-  no_invalidate      BOOLEAN DEFAULT FALSE,
+  no_invalidate       BOOLEAN DEFAULT FALSE,
   stattype            VARCHAR2 DEFAULT 'DATA',
   force               BOOLEAN DEFAULT FALSE);
 ```
@@ -65,7 +65,7 @@ DBMS_STATS.GATHER_TABLE_STATS (
 
 ```sql
 obclient> BEGIN
-            DBMS_STATS.GATHER_TABLE_STATS('testUser01', 'test', method_opt=>'FOR ALL COLUMNS SIZE 5', granularity=>'ALL', degree=>4, no_invalidate=>FALSE);
+            DBMS_STATS.GATHER_TABLE_STATS('testUser01', 'tbl1', method_opt=>'FOR ALL COLUMNS SIZE 5', granularity=>'ALL', degree=>4, no_invalidate=>FALSE);
          END;
 Query OK, 0 rows affected
 ```
