--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3700.set-table-stats-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3700.set-table-stats-oracle.md
@@ -16,7 +16,7 @@ DBMS_STATS.SET_TABLE_STATS (
   partname        VARCHAR2 DEFAULT NULL,
   numrows         NUMBER   DEFAULT NULL, 
   numblks         NUMBER   DEFAULT NULL,
-  avgrlen         NUMBER   DEFAULT NULL，
+  avgrlen         NUMBER   DEFAULT NULL,
   no_invalidate      BOOLEAN DEFAULT FALSE,
   force              BOOLEAN DEFAULT FALSE
  );
