--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
@@ -289,11 +289,11 @@
 
 ### 排查步骤
 
-可以通过视图 `GV$OB_LOG_STAT` 或 `V$OB_LOG_STAT` 来确认租户上是否有日志流无主。
+可以通过视图 `GV$OB_LOG_STAT` 来确认租户上是否有日志流无主。
 
 1. 租户管理员登录问题租户或问题租户所在集群的 `sys` 租户。
 
-2. 通过视图 `GV$OB_LOG_STAT` 或 `V$OB_LOG_STAT` 查询租户的所有日志流状态信息。
+2. 通过视图 `GV$OB_LOG_STAT` 查询租户的所有日志流状态信息。
 
    * 系统租户查看指定租户
 
@@ -325,3 +325,5 @@
    * `ROLE`：表示日志流角色，`LEADER` 表示副本角色为主；`FOLLOWER` 表示副本角色为备。
 
      如果日志流的所有副本均为 `FOLLOWER`，则表示该日志流无主。
+
+   有关 `GV$OB_LOG_STAT` 视图的更多说明，请参见 [GV$OB_LOG_STAT](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/12000.gv-ob_log_stat-mysql.md)。
