--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/200.switchover-failed.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/200.switchover-failed.md
@@ -4,13 +4,17 @@
 
 ## 问题现象
 
-在主租户或备租户上执行 Switchover 命令失败后，报错。
+执行 Switchover 命令主切备或备切主失败。其中，备切主失败概率相比更高。
 
-## 排查步骤
+## 问题原因及排查步骤
 
-### 常用排查方法
+执行 Switchover 命令备切主时，备租户需要查询主租户确认日志是否与其拉齐，因此失败原因可能是备租户出现落后，或者原主租户异常导致无法查询主租户等。
 
-主备租户上执行 Switchover 命令失败后，可以先从执行 Switchover 命令后的返回信息来初步判断报错原因，也可以通过查询 `DBA_OB_ROOTSERVICE_EVENT_HISTORY` 视图确认 Switchover 失败的原因。
+可以通过以下步骤来排查主切备或者备切主失败的原因。
+
+### 步骤一：根据 Switchover 失败的原因初步定位
+
+Switchover 失败首先可以从执行 Switchover 命令后返回的信息来初步判断报错原因，也可以通过查询 `DBA_OB_ROOTSERVICE_EVENT_HISTORY` 视图确认 Switchover 失败的原因。
 
 1. 租户管理员登录到备租户所在集群的 `sys` 租户。
 
@@ -20,11 +24,13 @@
    SELECT * FROM oceanbase.DBA_OB_ROOTSERVICE_EVENT_HISTORY  WHERE EVENT LIKE "%switchover to%" ORDER BY TIMESTAMP;
    ```
 
-   查询结果中，`VALUE2` 列的错误码表示切换失败的原因。有关视图 `DBA_OB_ROOTSERVICE_EVENT_HISTORY` 的更多说明，请参见 [](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/4800.oceanbase-dba_ob_rootservice_event_history-of-mysql-mode.md)。
+   查询结果中，`VALUE2` 列的错误码表示切换失败的原因。
 
-### 根据错误码排查
+   有关视图 `DBA_OB_ROOTSERVICE_EVENT_HISTORY` 的更多说明，请参见 [](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/4800.oceanbase-dba_ob_rootservice_event_history-of-mysql-mode.md)。
 
-通常遇到的 Switchover 失败的场景为备切主失败，错误码为 4179，表示备租户与主租户的日志不同步。首先需要确认在主备租户进行 Switchover 切换之前，是否已经检查过备租户，确认备租户落后主租户在很小的区间，例如，查询主备租户的 `SYNC_SCN`，确认两者相差不超过 5s。查看主备租户的 `SYNC_SCN` 的详细操作，请参见 [查看日志同步进度](../../400.high-availability/300.physical-standby-database-disaster-recovery/300.log-transport-service/400.view-the-log-synchronization-progress.md)。
+### 步骤二：根据错误码确认备切主失败的原因及处理方法
+
+通常遇到的 Switchover 失败的场景为备切主失败，错误码为 `4179`，表示备租户与主租户的日志不同步。首先需要确认在主备租户进行 Switchover 切换之前，是否已经检查过备租户，确认备租户落后主租户在很小的区间，例如，查询主备租户的 `SYNC_SCN`，确认两者相差不超过 5s。查看主备租户的 `SYNC_SCN` 的详细操作，请参见 [查看日志同步进度](../../400.high-availability/300.physical-standby-database-disaster-recovery/300.log-transport-service/400.view-the-log-synchronization-progress.md)。
 
 Switchover 相关的错误码及其处理方法如下表所示。
 
@@ -32,7 +38,7 @@ Switchover 相关的错误码及其处理方法如下表所示。
 |------------------|---------------------------------------------------------|-------------------------------------------------------------------------------------------|
 | 4179              | 备租户与原主租户的日志不同步                              | 检查备租户的 `SYNC_SCN` 与原主租户的 `SYNC_SCN` 是否相差在 20s 以内，如果是，则重试 Switchover。<main id="notice" type='explain'><h4>说明</h4><p>由于执行 Switchover 主切备或备切主后，系统会自动将原主租户或原备租户的 </code>SYNC_SCN</code> 推高 20s，故这里检查主备租户的 <code>SYNC_SCN</code> 相差不超过 20s 即可。</p></main>
  |
-| 9088              | 原主租户的角色非 `STANDBY` 或者状态为非 `NORMAL`          | 检查主租户角色和租户状态是否为 `STANDBY `和 `NORMAL`，如果是，重试 Switchover。               |
-| 9089              | 原主租户的日志流状态与实际不匹配，可能是备租户切换为主租户异常     | 检查主租户角色和租户状态是否为 `STANDBY `和 `NORMAL`，如果是，重试 Switchover。          |
+| 9088              | 原主租户的角色非 `STANDBY` 或者状态为非 `NORMAL`          | 检查主租户角色和租户状态是否为 `STANDBY` 和 `NORMAL`，如果是，重试 Switchover。               |
+| 9089              | 原主租户的日志流状态与实际不匹配，可能是备租户切换为主租户异常     | 检查主租户角色和租户状态是否为 `STANDBY` 和 `NORMAL`，如果是，重试 Switchover。          |
 | 4043              | 登录原主租户的用户名和密码错误或者原主租户已经被删除无法登录 | 检查主租户是否存在，如果已经被删除，则只能执行 Failover，Failover 相关操作请参见 [Failover](../../400.high-availability/300.physical-standby-database-disaster-recovery/600.role-switch/300.perform-failover.md)。         |
 | 5260              | 原主租户被锁定，无法查询原主租户                           | 主租户解除锁定后，重试 Switchover，为主租户解除锁定的详细操作请参见 [租户锁定和解锁](../../200.tenant-management/600.common-tenant-operations/1100.tenant-locking-and-unlocking.md)。           |
