--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
@@ -72,11 +72,13 @@
 
 ### 问题现象
 
+* 使用 `BACKUP DATABASE PLUS ARCHIVELOG` 命令创建备租户后，未再设置日志恢复源或设置的日志恢复源为空，即 `ALTER SYSTEM SET log_restore_source = '';`。
+* 备租户被清空过日志恢复源
+* 主租户通过 Switchover 命令切换为备租户后，未设置日志恢复源
 
-使用 `BACKUP DATABASE PLUS ARCHIVELOG` 命令创建备租户后，未再设置日志恢复源。
 ### 问题原因
 
-在 OceanBase 数据库中，备租户主要通过日志恢复源来拉取上游的日志。通过物理备份恢复功能创建的备租户，用户在执行 `RECOVER` 命令后，默认会继续从恢复时指定的归档目录继续恢复日志；通过 `CREATE STANDBY TENANT` 命令创建的备租户，默认会通过网络直接从主租户处同步日志；而通过 `BACKUP DATABASE PLUS ARCHIVELOG` 命令创建的备租户未指定日志恢复源，无法直接开启日志持续同步。需要设置日志恢复源后，才能开启日志的持续同步。
+在 OceanBase 数据库中，备租户主要通过日志恢复源来拉取上游的日志。通过物理备份恢复功能创建的备租户，用户在执行 `RECOVER` 命令后，默认会继续从恢复时指定的归档目录继续恢复日志；通过 `CREATE STANDBY TENANT` 命令创建的备租户，默认会通过网络直接从主租户处同步日志；而通过 `BACKUP DATABASE PLUS ARCHIVELOG` 命令创建的备租户未指定日志恢复源，无法直接开启日志持续同步。
 
 此外，当备租户的日志恢复源为空，或者设置的日志恢复源被损坏时，同样会导致备租户卡住，例如，基于的物理网络备库其主租户被删除或者访问视图的专用账号的密码被修改，备租户用于恢复日志的目标归档目录被删除等。
 
@@ -186,7 +188,7 @@
     | 日志同步状态            | 含义                                                                                  |
     |------------------------|--------------------------------------------------------------------------------------|
     | NORMAL                 | 正常同步中                                                                            |
-    | SOURCE HAS A GAP       | 备库与日志源端日志有 gap，主租户的日志未同步到备租户就已回收                              |
+    | SOURCE HAS A GAP       | 备租户与源端日志有 gap，主租户的日志未同步到备租户就已回收                              |
     | STANDBY LOG NOT MATCH  | 恢复日志与备租户冲突，可能是出现双 PRIMARY 或者日志恢复源设置错误                         |
     | CHECK USER OR PASSWORD | 复制账户用户名或密码不对，无法访问原主租户                                                |
     | CHECK NETWORK          | 主租户不可达，需要检查网络是否异常                                                           |
@@ -280,7 +282,7 @@
 
 ### 问题现象
 
-备租户有日志流无主，备租户的日志同步卡住。
+上述问题都排除后，备租户日志同步仍然卡住，可以尝试确认备租户的日志流是否发生无主。
 
 ### 问题原因
 
@@ -292,7 +294,7 @@
 
 1. 租户管理员登录问题租户或问题租户所在集群的 `sys` 租户。
 
-2. 通过视图 `GV$OB_LOG_STAT` 查询租户的所有日志流状态信息。
+2. 通过视图 `GV$OB_LOG_STAT` 查询租户的所有日志流的状态信息。
 
    * 系统租户查看指定租户
 
@@ -305,14 +307,30 @@
      :::tab
      tab  MySQL 模式
 
+     语句如下：
+
      ```sql
      SELECT TENANT_ID, LS_ID, ROLE FROM oceanbase.GV$OB_LOG_STAT;
      ```
 
+     或者，也可以通过以下语句，直接查出所有无主的日志流。
+
+     ```sql
+     SELECT DISTINCT TENANT_ID, LS_ID FROM oceanbase.GV$OB_LOG_STAT WHERE (TENANT_ID, LS_ID) NOT IN (SELECT DISTINCT TENANT_ID, LS_ID FROM oceanbase.GV$OB_LOG_STAT WHERE ROLE='LEADER');
+     ```
+
      tab Oracle 模式
+
+     语句如下：
 
      ```sql
      SELECT TENANT_ID, LS_ID, ROLE FROM SYS.GV$OB_LOG_STAT;
+     ```
+
+     或者，也可以通过以下语句，直接查出所有无主的日志流。
+
+     ```sql
+     SELECT DISTINCT TENANT_ID, LS_ID FROM SYS.GV$OB_LOG_STAT WHERE (TENANT_ID, LS_ID) NOT IN (SELECT DISTINCT TENANT_ID, LS_ID FROM SYS.GV$OB_LOG_STAT WHERE ROLE='LEADER');
      ```
 
      :::
@@ -325,4 +343,35 @@
 
      如果日志流的所有副本均为 `FOLLOWER`，则表示该日志流无主。
 
+   或者，您也可以通过以下语句，直接查出所有无主的日志流。
+
+   * 系统租户查看指定租户
+
+     ```sql
+     SELECT DISTINCT TENANT_ID, LS_ID FROM oceanbase.GV$OB_LOG_STAT WHERE (TENANT_ID, LS_ID) NOT IN (SELECT DISTINCT TENANT_ID, LS_ID FROM oceanbase.GV$OB_LOG_STAT WHERE ROLE='LEADER');
+     ```
+
+   * 问题租户查看本租户
+
+     :::tab
+     tab  MySQL 模式
+
+     语句如下：
+
+     ```sql
+     SELECT DISTINCT TENANT_ID, LS_ID FROM oceanbase.GV$OB_LOG_STAT WHERE (TENANT_ID, LS_ID) NOT IN (SELECT DISTINCT TENANT_ID, LS_ID FROM oceanbase.GV$OB_LOG_STAT WHERE ROLE='LEADER');
+     ```
+
+     tab Oracle 模式
+
+     语句如下：
+
+     ```sql
+     SELECT DISTINCT TENANT_ID, LS_ID FROM SYS.GV$OB_LOG_STAT WHERE (TENANT_ID, LS_ID) NOT IN (SELECT DISTINCT TENANT_ID, LS_ID FROM SYS.GV$OB_LOG_STAT WHERE ROLE='LEADER');
+     ```
+
+     :::
+
    有关 `GV$OB_LOG_STAT` 视图的更多说明，请参见 [GV$OB_LOG_STAT](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/12000.gv-ob_log_stat-mysql.md)。
+
+   根据查询结果，在确认备租户日志流均有主的情况下，可以使用相同的方法再确认主租户的日志流是否无主的问题，主租户的日志流无主也会间接导致备租户日志流同步卡住。
