--- a/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
+++ b/zh-CN/600.manage/1000.troubleshooting/800.physical-standby-database/100.physical-standby-database-synchrolock.md
@@ -2,7 +2,7 @@
 
 本文主要介绍物理备库在同步过程中出现日志同步卡住时问题的排查及定位方法。
 
-## 问题一：未执行 RECOVER 命令导致备库同步卡住
+## 问题一：未执行 RECOVER 命令
 
 ### 问题现象
 
@@ -31,11 +31,15 @@
      :::tab
      tab  MySQL 模式
 
+     语句如下：
+
      ```sql
      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS, SWITCHOVER_STATUS, SYNC_SCN, REPLAYABLE_SCN,READABLE_SCN, RECOVERY_UNTIL_SCN FROM oceanbase.DBA_OB_TENANTS;
      ```
 
      tab Oracle 模式
+
+     语句如下：
 
      ```sql
      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS, SWITCHOVER_STATUS, SYNC_SCN, REPLAYABLE_SCN,READABLE_SCN, RECOVERY_UNTIL_SCN FROM SYS.DBA_OB_TENANTS;
@@ -66,9 +70,9 @@
    1 row in set
    ```
 
-   有关 `DBA_OB_TENANTS` 视图的更多说明，请参见 [DBA_OB_TENANTS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/19300.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
+   有关视图 `DBA_OB_TENANTS` 的更多说明，请参见 [DBA_OB_TENANTS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/19300.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
 
-## 问题二：租户未设置日志恢复源导致备库同步卡住
+## 问题二：租户未设置日志恢复源
 
 ### 问题现象
 
@@ -84,7 +88,7 @@
 
 ### 排查步骤
 
-可以通过 `CDB_OB_LOG_RESTORE_SOURCE` 或 `DBA_OB_LOG_RESTORE_SOURCE` 来确认问题租户是否设置了日志恢复源。
+可以通过视图 `CDB_OB_LOG_RESTORE_SOURCE` 或 `DBA_OB_LOG_RESTORE_SOURCE` 来确认问题租户是否设置了日志恢复源。
 
 1. 租户管理员登录问题租户或问题租户所在集群的 `sys` 租户。
 
@@ -101,11 +105,15 @@
      :::tab
      tab  MySQL 模式
 
+     语句如下：
+
      ```sql
      SELECT * FROM oceanbase.DBA_OB_LOG_RESTORE_SOURCE;
      ```
 
      tab Oracle 模式
+
+     语句如下：
 
      ```sql
      SELECT * FROM SYS.DBA_OB_LOG_RESTORE_SOURCE;
@@ -130,9 +138,9 @@
    1 row in set
    ```
 
-   有关 `CDB_OB_LOG_RESTORE_SOURCE` 和 `DBA_OB_LOG_RESTORE_SOURCE` 视图的更多说明，请参见 [CDB_OB_LOG_RESTORE_SOURCE](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/21700.cdb_ob_log_restore_source-of-mysql-mode.md) 和 [DBA_OB_LOG_RESTORE_SOURCE](../../../700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/29100.dba_ob_log_restore_source-of-oracle-mode.md)。
+   有关视图 `CDB_OB_LOG_RESTORE_SOURCE` 和视图 `DBA_OB_LOG_RESTORE_SOURCE` 的更多说明，请参见 [CDB_OB_LOG_RESTORE_SOURCE](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/21700.cdb_ob_log_restore_source-of-mysql-mode.md) 和 [DBA_OB_LOG_RESTORE_SOURCE](../../../700.reference/700.system-views/500.system-view-of-oracle-mode/200.dictionary-view-of-oracle-mode/29100.dba_ob_log_restore_source-of-oracle-mode.md)。
 
-## 问题三：备库日志同步状态异常导致备库同步卡住
+## 问题三：备库日志同步状态异常
 
 ### 问题现象
 
@@ -165,11 +173,15 @@
      :::tab
      tab  MySQL 模式
 
+     语句如下：
+
      ```sql
      SELECT * FROM oceanbase.V$OB_LS_LOG_RESTORE_STATUS;
      ```
 
      tab Oracle 模式
+
+     语句如下：
 
      ```sql
      SELECT * FROM SYS.V$OB_LS_LOG_RESTORE_STATUS;
@@ -183,7 +195,7 @@
 
      * `SYNC_STATUS`：表示该日志流同步状态，其中，`NORMAL` 表示该日志流的日志同步状态正常，如果为其他状态则表示异常。日志同步状态及其含义如下表所示。
 
-     有关 `V$OB_LS_LOG_RESTORE_STATUS` 视图的更多说明，请参见 [V$OB_LS_LOG_RESTORE_STATUS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/14200.v-ob_ls_log_restore_status-of-mysql-mode.md)。
+     有关视图 `V$OB_LS_LOG_RESTORE_STATUS` 的更多说明，请参见 [V$OB_LS_LOG_RESTORE_STATUS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/14200.v-ob_ls_log_restore_status-of-mysql-mode.md)。
 
     | 日志同步状态            | 含义                                                                                  |
     |------------------------|--------------------------------------------------------------------------------------|
@@ -201,7 +213,7 @@
     | WAIT LOG STREAM CREATED  | 等待备租户创建日志流完成                                                              |
     | NOT AVAILABLE          | 其他异常导致的日志同步不可用                                                            |
 
-## 问题四：备租户同步位点推进卡住导致备库同步卡住
+## 问题四：备租户同步位点推进卡住
 
 ### 问题现象
 
@@ -215,7 +227,7 @@
 
 1. 租户管理员登录问题租户或问题租户所在集群的 `sys` 租户。
 
-2. 通过 `DBA_OB_TENANTS` 视图获取租户的同步位点 `SYNC_SCN`。
+2. 通过视图 `DBA_OB_TENANTS` 查看租户的同步位点 `SYNC_SCN`。
 
    可以根据租户的 `TENANT_ID` 或 `TENANT_NAME` 查询问题租户的 `SYNC_SCN`。
 
@@ -230,11 +242,15 @@
      :::tab
      tab  MySQL 模式
 
+     语句如下：
+
      ```sql
      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS, SWITCHOVER_STATUS, SYNC_SCN, REPLAYABLE_SCN,READABLE_SCN, RECOVERY_UNTIL_SCN FROM oceanbase.DBA_OB_TENANTS;
      ```
 
      tab Oracle 模式
+
+     语句如下：
 
      ```sql
      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS, SWITCHOVER_STATUS, SYNC_SCN, REPLAYABLE_SCN,READABLE_SCN, RECOVERY_UNTIL_SCN FROM SYS.DBA_OB_TENANTS;
@@ -260,11 +276,15 @@
      :::tab
      tab  MySQL 模式
 
+     语句如下：
+
      ```sql
      SELECT * FROM oceanbase.V$OB_LS_LOG_RESTORE_STATUS;
      ```
 
      tab Oracle 模式
+
+     语句如下：
 
      ```sql
      SELECT * FROM SYS.V$OB_LS_LOG_RESTORE_STATUS;
@@ -276,9 +296,9 @@
 
      根据两次的查询结果，比较所有日志流的 `SYNC_SCN` 与租户的 `SYNC_SCN`。如果所有日志流的 `SYNC_SCN` 均大于租户的 `SYNC_SCN` 并且没有变化，则表示租户的日志同步进度统计有问题，需要进一步排查租户日志同步进度统计的问题。
 
-     有关 `V$OB_LS_LOG_RESTORE_STATUS` 视图的更多说明，请参见 [V$OB_LS_LOG_RESTORE_STATUS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/14200.v-ob_ls_log_restore_status-of-mysql-mode.md)。
+     有关视图 `V$OB_LS_LOG_RESTORE_STATUS` 的更多说明，请参见 [V$OB_LS_LOG_RESTORE_STATUS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/14200.v-ob_ls_log_restore_status-of-mysql-mode.md)。
 
-## 问题五：备库日志流无主导致备库同步卡住
+## 问题五：备库有日志流无主
 
 ### 问题现象
 
@@ -372,6 +392,63 @@
 
      :::
 
-   有关 `GV$OB_LOG_STAT` 视图的更多说明，请参见 [GV$OB_LOG_STAT](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/12000.gv-ob_log_stat-mysql.md)。
+   有关视图 `GV$OB_LOG_STAT` 的更多说明，请参见 [GV$OB_LOG_STAT](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/300.performance-view-of-mysql-mode/12000.gv-ob_log_stat-mysql.md)。
 
    根据查询结果，在确认备租户日志流均有主的情况下，可以使用相同的方法再确认主租户的日志流是否无主的问题，主租户的日志流无主也会间接导致备租户日志流同步卡住。
+
+## 问题六：主备租户的角色都是 `STANDBY`
+
+### 问题现象
+
+在无级联备库的场景中，主备关系的租户需要至少一个主租户（即租户角色为 `PRIMARY`），否则两个租户的日志同步进度会表现为不再推进。
+
+### 问题原因
+
+在主租户上执行 Switchover 主切备后，原主备租户的角色都是 `STADNBY`，就会发生这种情况。
+
+### 排查步骤
+
+可以通过 `DBA_OB_TENANTS` 视图分别查看主备租户的角色，确认主备租户的角色是否都是 `STANDBY`。
+
+主备租户或者所在集群SYS租户执行以下SQL，查询租户角色ROLE。
+
+1. 租户管理员分别登录主备租户或主备租户所在集群的 `sys` 租户。
+
+2. 分别执行以下语句，查询主备租户的角色。
+
+   * 系统租户查看主租户或备租户
+
+      ```sql
+      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS FROM oceanbase.DBA_OB_TENANTS;
+      ```
+
+   * 主租户或备租户查看本租户
+
+      :::tab
+      tab  MySQL 模式
+
+      语句如下：
+
+      ```sql
+      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS FROM oceanbase.DBA_OB_TENANTS;
+      ```
+
+      tab Oracle 模式
+
+      语句如下：
+
+      ```sql
+      SELECT TENANT_ID, TENANT_NAME, TENANT_ROLE, STATUS FROM SYS.DBA_OB_TENANTS;
+      ```
+
+      :::
+
+   查询结果中：
+
+   * `TENANT_ID`：表示租户 ID。
+   * `TENANT_NAME`：表示租户名。
+   * `TENANT_ROLE`：表示租户角色。`PRIMARY` 表示主租户；`STANDBY` 表示备租户。
+
+   根据查询结果，确认是否出现主备租户的角色都是 `STANDBY` 的情况。
+
+   有关视图 `DBA_OB_TENANTS` 的更多说明，请参见 [DBA_OB_TENANTS](../../../700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/19300.oceanbase-dba_ob_tenants-of-mysql-mode.md)。
