--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/2500.import-table-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/2500.import-table-stats-mysql.md
@@ -10,12 +10,10 @@ DBMS_STATS.IMPORT_TABLE_STATS (
    tabname            VARCHAR2,
    partname           VARCHAR2 DEFAULT NULL,
    stattab            VARCHAR2,
-   statid             VARCHAR2 DEFAULT NULL,
    cascade            BOOLEAN DEFAULT TRUE,
    statown            VARCHAR2 DEFAULT NULL,
    no_invalidate      BOOLEAN DEFAULT FALSE,
-   force              BOOLEAN DEFAULT FALSE,
-   stat_category      VARCHAR2 DEFAULT DEFAULT_STAT_CATEGORY
+   force              BOOLEAN DEFAULT FALSE
 );
 ```
 
@@ -27,12 +25,10 @@ DBMS_STATS.IMPORT_TABLE_STATS (
 | tabname       | 表名称。                                                                      |
 | partname      | 表分区的名称。 如果表已分区且 `partname` 为 `NULL`，则导入全局和分区列统计信息    |
 | stattab       | 指定导入的用户统计信息表的表名。                                                |
-| statid        | <br>**说明** 当前版本暂不支持此参数。</br>                                      |
 | cascade       | 如果为 `TRUE`，则还导出此表的列和索引统计信息。                                  |
 | statown       | 指定导入的用户统计信息表的用户名。                                              |
-| no_invalidate | <br> **说明**  当前版本暂不支持此参数。</br>                        |
+| no_invalidate | 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。 |
 | force         | 是否强制导入，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会导入统计信息。 |
-| stat_category | <br> **说明**  当前版本暂不支持此参数。 </br>                       |
 
 
 
@@ -54,9 +50,12 @@ DBMS_STATS.IMPORT_TABLE_STATS (
 
 ## 示例 
 
-将用户 `testUser01` 的 `test_stat` 表的统计信息导入到用户 `testUser02` 的表 `tbl1` 中。
+将用户 `testUser01` 的 `tbl1` 表的统计信息导入到用户 `testUser02` 的表 `test_stat` 中。
 
 ```sql
+obclient> CALL DBMS_STATS.CREATE_STAT_TABLE('testUser01', 'test_stat');
+Query OK, 0 rows affected
+
 obclient> CALL DBMS_STATS.IMPORT_TABLE_STATS('testUser01', 'tbl1', stattab=>'test_stat', 
     statown=>'testUser02');
 Query OK, 0 rows affected
