--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3700.set-table-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3700.set-table-stats-mysql.md
@@ -11,7 +11,9 @@ DBMS_STATS.SET_TABLE_STATS (
   partname        VARCHAR2 DEFAULT NULL,
   numrows         NUMBER   DEFAULT NULL, 
   numblks         NUMBER   DEFAULT NULL,
-  avgrlen         NUMBER   DEFAULT NULL);
+  avgrlen         NUMBER   DEFAULT NULL,
+  no_invalidate      BOOLEAN DEFAULT FALSE,
+  force              BOOLEAN DEFAULT FALSE);
 ```
 
 
@@ -26,6 +28,8 @@ DBMS_STATS.SET_TABLE_STATS (
 | numrows  | 表级的总行数。                                                              |
 | numblks  | 表级占用的块数。                                                            |
 | avgrlen  | 列级的平均长度（以字节为单位）。                                             |
+| no_invalidate| 收集统计信息是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
+| force       | 是否强制收集，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会收集统计信息。  |
 
 
 
@@ -51,6 +55,6 @@ DBMS_STATS.SET_TABLE_STATS (
 置用户 `testUser01` 的表 `tbl1` 的总行数为一万行。
 
 ```sql
-obclient> CALL DBMS_STATS.SET_TABLE_STATS('testUser01', 'tbl1', numrows=>10000);
+obclient> CALL DBMS_STATS.SET_TABLE_STATS('testUser01', 'tbl1', numrows=>10000, force=>FALSE, no_invalidate=>FALSE);
 Query OK, 0 rows affected
 ```
