--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/2600.import-schema-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/2600.import-schema-stats-mysql.md
@@ -8,7 +8,6 @@
 DBMS_STATS.IMPORT_SCHEMA_STATS (
   ownname         VARCHAR2,
   stattab         VARCHAR2, 
-  statid          VARCHAR2 DEFAULT NULL,
   statown         VARCHAR2 DEFAULT NULL,
   no_invalidate   BOOLEAN DEFAULT FALSE,
   force           BOOLEAN DEFAULT FALSE
@@ -21,9 +20,8 @@ DBMS_STATS.IMPORT_SCHEMA_STATS (
 |---------------|------------------------------------------------------------------------------|
 | ownname       | Schema 名称。                                                                |
 | stattab       | 指定导出统计信息用户表的表名。                                                 |
-| statid        | <br>**说明** 当前版本暂不支持此参数。</br>                                              |
 | statown       | 指定导入的用户统计信息表的用户名。                                              |
-| no_invalidate | <br>**说明** 当前版本暂不支持此参数。</br>                                               |
+| no_invalidate | 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。  |
 | force         | 是否强制导入，并忽略锁的状态。默认为 `FALSE`。如果设置为 `TRUE`，即使统计信息被锁定，也会导入统计信息。 |
 
 
