--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3000.restore-table-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3000.restore-table-stats-mysql.md
@@ -9,7 +9,6 @@ DBMS_STATS.RESTORE_TABLE_STATS (
   ownname                   VARCHAR2, 
   tabname                   VARCHAR2, 
   as_of_timestamp           TIMESTAMP WITH TIME ZONE,
-  restore_cluster_index     BOOLEAN DEFAULT FALSE,
   force                     BOOLEAN DEFAULT FALSE,
   no_invalidate             BOOLEAN DEFAULT FALSE);
 ```
@@ -21,9 +20,8 @@ DBMS_STATS.RESTORE_TABLE_STATS (
 | ownname               | 用户名。                    |
 | tabname               | 表名称。                    |
 | as_of_timestamp       | 指定恢复时间。                 |
-| restore_cluster_index | <br>**说明** 当前版本暂不支持此参数。  </br>   |
 | force                 | 强制恢复，并忽略加锁。默认是 `FALSE`。 |
-| no_invalidate         | <br>**说明** 当前版本暂不支持此参数。  </br>   |
+| no_invalidate         | 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。  |
 
 
 ## 异常情况 
