--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3100.restore-schema-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3100.restore-schema-stats-mysql.md
@@ -21,7 +21,7 @@ DBMS_STATS.RESTORE_SCHEMA_STATS(
 | ownname         | Schema 名称。              |
 | as_of_timestamp | 指定恢复时间。                 |
 | force           | 强制恢复，并忽略加锁。默认是 `FALSE`。 |
-| no_invalidate   | <br>**说明** 当前版本暂不支持此参数。 </br>    |
+| no_invalidate   | 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。    |
 
 
 
