--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3500.set-column-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/3500.set-column-stats-mysql.md
@@ -13,7 +13,9 @@ DBMS_STATS.SET_COLUMN_STATS (
   distcnt         NUMBER DEFAULT NULL,
   density         NUMBER DEFAULT NULL,
   nullcnt         NUMBER DEFAULT NULL, 
-  avgclen         NUMBER DEFAULT NULL);
+  avgclen         NUMBER DEFAULT NULL,
+  no_invalidate      BOOLEAN DEFAULT FALSE,
+  force              BOOLEAN DEFAULT FALSE);
 ```
 
 ## 参数解释 
@@ -28,6 +30,8 @@ DBMS_STATS.SET_COLUMN_STATS (
 | density  | 列级的稠密度。如果此值为 `NULL` 且 `distcnt` 不为 `NULL`，则密度值为 `distcnt`。|
 | nullcnt  | 列级的 `NULL` 值个数。                                                         |
 | avgclen  | 列级的平均长度（以字节为单位）。                                                 |
+| no_invalidate| 收集统计信息是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
+| force            | 是否强制收集，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会收集统计信息。  |
 
 
 
