--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/200.deploy-the-quorum-high-availability-service.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/200.deploy-the-quorum-high-availability-service.md
@@ -48,10 +48,10 @@ OceanBase 数据库 V4.x 版本支持了仲裁服务（Arbitration Service），
    示例如下：
 
    ```shell
-   [root@xxx /home/admin/rpm]# rpm -ivh oceanbase-4.1.0.0-100000682023020119.el7.x86_64.rpm
+   [root@xxx /home/admin/rpm]# rpm -ivh oceanbase-4.2.0.0-100000052023073123.el7.x86_64.rpm
    Preparing...                          ################################# [100%]
    Updating / installing...
-      1:oceanbase-4.1.0.0-100000682023020################################# [100%]
+      1:oceanbase-4.2.0.0-100000052023073################################# [100%]
    ```
 
 2. （可选）安装 OceanBase 客户端。
@@ -258,15 +258,8 @@ OceanBase 数据库 V4.x 版本支持了仲裁服务（Arbitration Service），
    通过 OBClient 命令连接任意一台节点，密码为空。
 
    ```shell
-   [root@xxx admin]# obclient -h127.1 -uroot@sys -P2881 -p
+   [root@xxx admin]# obclient -h127.1 -uroot -P2881 -p
    Enter password:
-   Welcome to the OceanBase.  Commands end with ; or \g.
-   Your OceanBase connection id is 3221225475
-   Server version: OceanBase 4.1.0.0 (r100000682023020119-c760cbb1023d73a2647f28add283646b1569418f) (Built Feb  1 2023 20:07:36)
-
-   Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
-
-   Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 
    obclient [(none)]> SET SESSION ob_query_timeout=1000000000;
    Query OK, 0 rows affected
@@ -276,8 +269,8 @@ OceanBase 数据库 V4.x 版本支持了仲裁服务（Arbitration Service），
    ```
 
    <main id="notice" type='notice'>
-   <h4>注意</h4>
-   <p>如果这一步失败报错了，其原因很可能就是 observer 进程启动参数有不对、observer 相关目录权限不对、日志目录空间不足一定比例（跟数据目录合用了大目录，空间被数据目录占用了）、节点时间不同步、节点内存资源不足等。请先排查这些问题点后，然后清理 OceanBase 目录从头开始部署。</p>
+     <h4>注意</h4>
+     <p>如果这一步失败报错了，其原因很可能就是 observer 进程启动参数有不对、observer 相关目录权限不对、日志目录空间不足一定比例（跟数据目录合用了大目录，空间被数据目录占用了）、节点时间不同步、节点内存资源不足等。请先排查这些问题点后，然后清理 OceanBase 目录从头开始部署。</p>
    </main>
 
 3. 验证集群初始化成功。
