--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/400.deploy-three-oceanbase-replica-clusters.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/400.deploy-three-oceanbase-replica-clusters.md
@@ -36,11 +36,11 @@
 
    示例如下：
 
-   ```bash
-   [root@xxx admin]# rpm -ivh oceanbase-*-20220418212020.el7.x86_64.rpm
+   ```shell
+   [root@xxx /home/admin/rpm]# rpm -ivh oceanbase-4.2.0.0-100000052023073123.el7.x86_64.rpm
    Preparing...                          ################################# [100%]
    Updating / installing...
-      1:oceanbase-*-20220418212020.################################# [100%]
+      1:oceanbase-4.2.0.0-100000052023073################################# [100%]
    ```
 
 2. （可选）安装 OceanBase 客户端。
