--- a/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/100.stand-alone-deployment-of-oceanbase-database-new.md
+++ b/zh-CN/400.deploy/300.deploy-oceanbase-enterprise-edition/400.deploy-through-the-command-line/200.deploy-the-oceanbase-cluster-command-line/100.stand-alone-deployment-of-oceanbase-database-new.md
@@ -212,15 +212,8 @@
    通过 OBClient 客户端连接已启动的 observer 进程，密码为空。
 
    ```shell
-   [root@xxx /home/admin]# obclient -h127.1 -uroot@sys -P2881 -p
+   [root@xxx /home/admin]# obclient -h127.1 -uroot -P2881 -p
    Enter password:
-   Welcome to the OceanBase.  Commands end with ; or \g.
-   Your OceanBase connection id is 3221231256
-   Server version: OceanBase 4.1.0.0 (r100000682023020119-c760cbb1023d73a2647f28add283646b1569418f) (Built Feb  1 2023 20:07:36)
-
-   Copyright (c) 2000, 2018, OceanBase and/or its affiliates. All rights reserved.
-
-   Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.
 
    obclient [(none)]> SET SESSION ob_query_timeout=1000000000;
    Query OK, 0 rows affected
