--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3600.set-index-stats-oracle.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3600.set-index-stats-oracle.md
@@ -64,8 +64,7 @@ DBMS_STATS.SET_INDEX_STATS (
 设置用户 `testUser01` 的索引 `idx1` 的相关信息。
 
 ```sql
-obclient> CALL DBMS_STATS.SET_INDEX_STATS('testUser01', 'idx1', numrows=>10, avgrlen=>10, 
-    tabname=>'tbl1');
+obclient> CALL DBMS_STATS.SET_INDEX_STATS('testUser01', 'idx1', numrows=>10, avgrlen=>10, 'tbl1');
 Query OK, 0 rows affected
 ```
 
