--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3500.set-column-stats-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3500.set-column-stats-oracle.md
@@ -18,7 +18,9 @@ DBMS_STATS.SET_COLUMN_STATS (
   distcnt         NUMBER DEFAULT NULL,
   density         NUMBER DEFAULT NULL,
   nullcnt         NUMBER DEFAULT NULL, 
-  avgclen         NUMBER DEFAULT NULL);
+  avgclen         NUMBER DEFAULT NULL,
+  no_invalidate      BOOLEAN DEFAULT FALSE,
+  force              BOOLEAN DEFAULT FALSE);
 ```
 
 ## 参数解释 
@@ -33,6 +35,8 @@ DBMS_STATS.SET_COLUMN_STATS (
 | density  | 列级的稠密度。如果此值为 `NULL` 且 `distcnt` 不为 `NULL`，则密度值为 `distcnt`。|
 | nullcnt  | 列级的 `NULL` 值个数。                                                         |
 | avgclen  | 列级的平均长度（以字节为单位）。                                                 |
+| no_invalidate| 收集统计信息是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
+| force            | 是否强制收集，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会收集统计信息。  |
 
 
 
@@ -51,6 +55,8 @@ DBMS_STATS.SET_COLUMN_STATS (
 OceanBase 数据库当前版本在处理用户自定义统计信息时，`SET_COLUMN_STATS` 指定的统计信息类型只能是存储在字典中的类型。如果此统计类型为 `NULL`，则存储与索引或列关联的统计类型。
 
 要调用此过程，必须是表的所有者。对于由 `SYS` 所拥有的对象，需要是表的所有者或具有 `SYSDBA` 权限才能调用此过程。
+
+对于取值为 `TRUE` 和 `FALSE` 的参数，需要在 `BEGIN ... END` 块中执行该过程。
 
 ## 示例 
 
