--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3600.set-index-stats-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/3600.set-index-stats-oracle.md
@@ -15,6 +15,7 @@ DBMS_STATS.SET_INDEX_STATS (
   indname            VARCHAR2,
   partname           VARCHAR2  DEFAULT NULL,
   numrows            NUMBER    DEFAULT NULL,
+  no_invalidate      BOOLEAN   DEFAULT FALSE,
   force              BOOLEAN   DEFAULT FALSE,
   avgrlen            NUMBER    DEFAULT NULL,
   nummacroblks       NUMBER    DEFAULT NULL,
@@ -26,10 +27,11 @@ DBMS_STATS.SET_INDEX_STATS (
 
 |      参数      |                                          解释                                       |
 |--------------|--------------------------------------------------------------------------------------|
-| ownname      | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。                                                                     |
+| ownname      | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。     |
 | indname      | 索引名称。                                                                            |
 | partname     | 分区名称。                                                                            |
 | numrows      | 索引中的行数（分区）。                                                                 |
+| no_invalidate| 收集统计信息是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
 | force        | 是否强制设置索引统计信息，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会设置索引统计信息。 |
 | avgrlen      | 索引表的平均行长（以字节为单位）。                                                      |
 | nummacroblks | 索引表宏块数。                                                                        |
@@ -54,14 +56,14 @@ DBMS_STATS.SET_INDEX_STATS (
 
 * 优化器通过缓存数据来估计索引或统计表访问的缓存块数。操作的总成本包括从磁盘读取未缓存块的 I/O 成本、从缓冲区中获取缓存块的 CPU 成本以及处理数据的 CPU 成本。
 
+* 对于取值为 `TRUE` 和 `FALSE` 的参数，需要在 `BEGIN ... END` 块中执行该过程。
 
 ## 示例 
 
 设置用户 `testUser01` 的索引 `idx1` 的相关信息。
 
 ```sql
-obclient> CALL DBMS_STATS.SET_INDEX_STATS('testUser01', 'idx1', numrows=>10, avgrlen=>10， 
-    tabname=>'tbl1');
+obclient> CALL DBMS_STATS.SET_INDEX_STATS('testUser01', 'idx1', numrows=>10, avgrlen=>10，'tbl1');
 Query OK, 0 rows affected
 ```
 
