--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/600.delete-table-stats-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/600.delete-table-stats-oracle.md
@@ -14,7 +14,9 @@ DBMS_STATS.DELETE_TABLE_STATS (
   tabname               VARCHAR2, 
   partname              VARCHAR2 DEFAULT NULL,
   cascade_parts         BOOLEAN  DEFAULT TRUE, 
-  cascade_columns       BOOLEAN  DEFAULT TRUE);
+  cascade_columns       BOOLEAN  DEFAULT TRUE,
+  no_invalidate     BOOLEAN DEFAULT FALSE,
+  force             BOOLEAN DEFAULT FALSE);
 ```
 
 
@@ -28,6 +30,8 @@ DBMS_STATS.DELETE_TABLE_STATS (
 | partname        | 从中获取统计信息的表所在（子）分区的名称。如果表已分区而 `partname` 为 `NULL`，则从全局表级别检索统计信息。 |
 | cascade_parts   | 是否同时删除分区级、子分区级的统计信息，默认为 `TRUE`。                     |
 | cascade_columns | 是否同时删除列级的统计信息，默认为 `TRUE`。                                 |
+| no_invalidate| 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
+| force            | 是否强制收集，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使统计信息被锁定，也会收集统计信息。  |
 
 
 
