--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/2600.import-schema-stats-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/2600.import-schema-stats-oracle.md
@@ -13,7 +13,6 @@
 DBMS_STATS.IMPORT_SCHEMA_STATS (
   ownname         VARCHAR2,
   stattab         VARCHAR2, 
-  statid          VARCHAR2 DEFAULT NULL,
   statown         VARCHAR2 DEFAULT NULL,
   no_invalidate   BOOLEAN DEFAULT FALSE,
   force           BOOLEAN DEFAULT FALSE
@@ -26,9 +25,8 @@ DBMS_STATS.IMPORT_SCHEMA_STATS (
 |---------------|------------------------------------------------------------------------------|
 | ownname       | 用户名称。如果用户名设置为 `NULL`，会默认使用当前登录用户名。                                                                |
 | stattab       | 指定导出统计信息用户表的表名。                                                 |
-| statid        | <br>**说明** 当前版本暂不支持此参数。</br>                                              |
 | statown       | 指定导入的用户统计信息表的用户名。                                              |
-| no_invalidate | <br>**说明** 当前版本暂不支持此参数。</br>                                               |
+| no_invalidate | 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。  |
 | force         | 是否强制导入，并忽略锁的状态。默认为 `FALSE`。如果设置为 `TRUE`，即使统计信息被锁定，也会导入统计信息。 |
 
 
