--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/500.delete-index-stats-oracle.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/300.pl-oracle/1400.pl-system-package-oracle/15900.dbms-stats-oracle/500.delete-index-stats-oracle.md
@@ -15,6 +15,7 @@ DBMS_STATS.DELETE_INDEX_STATS (
   indname          VARCHAR2,
   partname         VARCHAR2 DEFAULT NULL,
   cascade_parts    BOOLEAN  DEFAULT TRUE,
+  no_invalidate    BOOLEAN  DEFAULT FALSE,
   force            BOOLEAN  DEFAULT FALSE,
   tabname          VARCHAR2  DEFAULT NULL);
 ```
@@ -29,6 +30,7 @@ DBMS_STATS.DELETE_INDEX_STATS (
 | indname       | 索引名称。         |
 | partname      | 分区名称。            |
 | cascade_parts | 如果索引已分区并且 `partname` 为 `NULL`，则将此参数设置为 `TRUE` 会删除所有底层分区中该索引的统计信息。默认为 `TRUE`。   |
+| no_invalidate| 收集统计信息时是否刷 Plan Cache。设置为 `TRUE` 表示收集统计信息时不刷 Plan Cache。|
 | force         | 是否强制删除，并忽略锁的状态。默认为 `FALSE`。 如果设置为 `TRUE`，即使索引统计信息被锁定，也会删除索引统计信息。 |
 | tabname       | 表名称。   |
 
@@ -52,7 +54,7 @@ DBMS_STATS.DELETE_INDEX_STATS (
 删除用户 `testUser01` 的表 `tbl1` 的 `idx1` 索引的所有统计信息。
 
 ```sql
-obclient> CALL DBMS_STATS.DELETE_INDEX_STATS('testUser01', 'idx1', tabname=>'tbl1');
+obclient> CALL DBMS_STATS.DELETE_INDEX_STATS('testUser01', 'idx1', 'tbl1');
 Query OK, 0 rows affected
 ```
 
