--- a/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/4400.unlock-table-stats-mysql.md
+++ b/zh-CN/700.reference/400.development-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/4400.unlock-table-stats-mysql.md
@@ -19,7 +19,7 @@ DBMS_STATS.UNLOCK_TABLE_STATS (
 |----------|-----------------------|
 | ownname  | 用户名。如果用户名设置为 `NULL`，会默认使用当前登录用户名。   |
 | tabname  | 表名称。     |
-| stattype | 加锁的类型。一般包括如下三种加锁类型： <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'` </li>  </ul>  **说明**  当前版本的 OceanBase 数据库的 Oracle 模式仅支持 `'ALL'` 类型。 |
+| stattype | 加锁的类型。一般包括如下三种加锁类型： <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'` </li>  </ul>   |
 
 
 
