--- a/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/4300.unlock-schema-stats-mysql.md
+++ b/zh-CN/700.reference/500.sql-reference/300.pl-reference/200.pl-mysql/1000.pl-system-package-mysql/15900.dbms-stats-mysql/4300.unlock-schema-stats-mysql.md
@@ -17,7 +17,7 @@ DBMS_STATS.UNLOCK_SCHEMA_STATS (
 |    参数    |        解释       |
 |----------|--------------------|
 | ownname  | Schema 的名称。  |
-| stattype | 加锁的类型。一般包括如下三种加锁类型：  <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'` </li>  </ul> **说明**  当前版本的 OceanBase 数据库的 Oracle 模式仅支持 `'ALL'` 类型。 |
+| stattype | 加锁的类型。一般包括如下三种加锁类型：  <ul><li> `'ALL'` </li>  <li> `'DATA'`   </li>  <li> `'CACHE'` </li>  </ul>  |
 
 
 
